--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-csv</artifactId>
+            <version>2.11.4</version>
+        </dependency>
     </dependencies>
 
     <build>
