--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=default
+spring.config.activate.on-profile=default
 server.port=8080
 
 # PostgreSQL
@@ -16,3 +16,7 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.max-lifetime=1000
 spring.datasource.hikari.auto-commit=true
+
+# AWS S3
+aws.s3.region=ap-southeast-1
+aws.s3.bucket=oyo-dev-1
